--- a/app/wx_share/css/sports.css
+++ b/app/wx_share/css/sports.css
@@ -20,7 +20,7 @@
   html {
     font-size: 100px;
   }  
-   .auto_wid {
+   .auto_wid {——
     width: 1.8rem;
   }
   .moneyAndsong a{
@@ -77,7 +77,7 @@ input {
 body {
   font: 0.14rem  Helvetica, Microsoft YaHei, SimHei,sans-serif;/*实际相当于14px*/
   line-height: 1.6;
-  background-color: #fafafa;
+  /*background-color: #fafafa;*/
   -webkit-text-size-adjust: 100% !important; /*禁止IOS调整字体大小*/
 }
 /** {box-sizing:border-box;}*/
@@ -196,8 +196,8 @@ body {
 }
 
 .alt_font .padd_top10 img ,.padd_bot69 img{
-  width: .15rem;
-  height: .15rem;
+  width: .13rem;
+  /*height: .15rem;*/
   vertical-align: -2px;
   color: #39617a;
 }
@@ -254,17 +254,25 @@ body {
 
 }
 .font_controller img{
-  width: .13rem;
-  height: .13rem;
+  width: .15rem;
+  /*height: .13rem;*/
   vertical-align: -1px;
 }
+.main_flex {
+  display: -webkit-box; /* 老版本语法: Safari, iOS, Android browser, older WebKit browsers. */
+  display: -moz-box; /* 老版本语法: Firefox (buggy) */
+  display: -ms-flexbox; /* 混合版本语法: IE 10 */
+  display: -webkit-flex; /* 新版本语法: Chrome 21+ */
+  display: flex;  
+}
+
 .main_font {
   line-height: .17rem;
-  width: 1.8rem;
- /* -webkit-box-flex: 1;
+  /*width: 1.8rem;*/
+  -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
-  flex: 1;*/
+  flex: 1;
 }
 .two_code {
   width: .75rem;
