--- a/app/template/product_94.html
+++ b/app/template/product_94.html
@@ -8,5 +8,5 @@
   </h4>
   <div class="detail-container">
     <img src="img/product/info.jpg">
-    <span>95507</span>
+    <span>400-820-8858</span>
    </div>
