--- a/app/partials/toubao_dingzhi_all.html
+++ b/app/partials/toubao_dingzhi_all.html
@@ -252,21 +252,23 @@
 
 	<div class="sub_title ">
 		<img src="img/safe.jpg" class="tb_logo">投保方案</div>
-	<div class="cell ">
-		<div class="cell_hd " >
-			<div class="cell_hd_4_word">生效时间</div>
+	<div ng-show="view.effective_date">
+		<div class="cell" >
+			<div class="cell_hd " >
+				<div class="cell_hd_4_word">生效时间</div>
+			</div>
+			<div class="cell_hd cell_hd_border cell_primary">
+				<input type="date" class="ipt select_bg_2"   onfocus="_hmt.push(['_trackEvent', 'toubao', 'toubao_effective_date_focus']);"    name="effective_date" ng-model="user.effective_date"   placeholder="yyyy/MM/dd" min="{{minDate | date:'yyyy-MM-dd'}}" max="{{maxDate | date:'yyyy-MM-dd'}}" ng-change="changeEffectiveDate()"  placeholder="保险生效时间" required ></div>
 		</div>
-		<div class="cell_hd cell_hd_border cell_primary">
-			<input type="date" class="ipt select_bg_2"   onfocus="_hmt.push(['_trackEvent', 'toubao', 'toubao_effective_date_focus']);"    name="effective_date" ng-model="user.effective_date"   placeholder="yyyy/MM/dd" min="{{minDate | date:'yyyy-MM-dd'}}" max="{{maxDate | date:'yyyy-MM-dd'}}" ng-change="changeEffectiveDate()"  placeholder="保险生效时间" required ></div>
-	</div>
-	<div class="cell"  style="color:red"
-            ng-show="order.effective_date.$dirty && order.effective_date.$invalid ">
-		<small class="error" ng-show="order.effective_date.$error.required">生效日期必填</small>
-		<small class="error" ng-show="order.effective_date.$error.min">生效日期小于产品的最小要求</small>
-		<small class="error" ng-show="order.effective_date.$error.max">生效日期超过产品的最大要求</small>
+		<div class="cell"  style="color:red"
+	            ng-show="order.effective_date.$dirty && order.effective_date.$invalid ">
+			<small class="error" ng-show="order.effective_date.$error.required">生效日期必填</small>
+			<small class="error" ng-show="order.effective_date.$error.min">生效日期小于产品的最小要求</small>
+			<small class="error" ng-show="order.effective_date.$error.max">生效日期超过产品的最大要求</small>
+		</div>
 	</div>
 
-	<div class="cell ">
+	<div class="cell "  ng-show="view.ineffective_date">
 		<div class="cell_hd " >
 			<div class="cell_hd_4_word">失效时间</div>
 		</div>
