simple auto commit

--- a/app/partials/toubao_dingzhi_all.html
+++ b/app/partials/toubao_dingzhi_all.html
@@ -307,7 +307,7 @@
 		</table>
 	</div>
 
-	<div class="cell_title "  style="font-size: 0.16rem;margin-bottom: 0.7rem;">
+	<div class="cell_title "  style="font-size: 0.16rem;margin-bottom: 40px;">
 		<input type="checkbox" style="width:20px;height:20px; vertical-align:middle;" ng-model="know_contract" name="know_contract"  >
 		<a href="/ybwx-web/api/web_page/15" style="color:#000;">
 			已阅读
@@ -321,7 +321,7 @@
 
 <div class="cell pay_container"  >
 	<a href="javascript:void(0)" class="btn btn_n_primary right"  ng-click="submitbt()" id="submitButton" >确认投保</a>
-	<a href="javascript:void(0)" class="btn btn_n_primary left tg_dz_fr"   id="submitButton" >共计  <span class="money_size">{{premium/100}}</span> 元</a>
+	<a href="javascript:void(0)" class="btn btn_n_primary left tg_dz_fr"   id="submitButton" >共计  <span class="money_size">{{premium}}</span> 元</a>
 </div>
 
 <script type="text/javascript">
