simple auto commit

--- a/app/partials/detail.html
+++ b/app/partials/detail.html
@@ -102,7 +102,7 @@
     </tr>
   </table>
   <div class="introd-sum">
-    <span class="money_color" style="font-weight: bold;">{{money/100 | number}}</span>
+    <span class="money_color" style="font-weight: bold;">{{money | number}}</span>
     元<span ng-show="plan.premium_type==2">起</span> &nbsp;&nbsp;<span ng-show="plan.premium_type==1">保
     <span class="money_color" style="font-weight: bold;"  >{{plan.coverage_period}}</span> {{danwei}}</span>
    
