simple auto commit

--- a/app/partials/detail.html
+++ b/app/partials/detail.html
@@ -8,7 +8,7 @@
       <img ng-src="{{data.small_image}}" ></div>
     <div class="fl">
       <p >
-        <span  style="font-size:18px;color:#ff5c00;">{{money/100 | number}}</span>
+        <span  style="font-size:18px;color:#ff5c00;">{{money | number}}</span>
         元
       </p>
       <p>*最终购买价格</p>
