simple auto commit

--- a/app/partials/education.html
+++ b/app/partials/education.html
@@ -2,22 +2,22 @@
 	
 	<div class="ed-container"  ng-if="type=='2'">
 		<h4>重大疾病发生率</h4>
-		<img src="img/ed_cancer.png">
-		<img src="img/ed_cancer_chart.png">
+		<img ng-src="img/ed_cancer.png">
+		<img ng-src="img/ed_cancer_chart.png">
 		<h4>保障额度</h4>
-		<img src="img/ed_cancer_money.png">
+		<img ng-src="img/ed_cancer_money.png">
 	</div>
 	<div class="ed-container"  ng-if="type=='3'">
 		<h4>经验生命表</h4>
-		<img src="img/eduction_income.png">
+		<img ng-src="img/eduction_income.png">
 		<h4>保障额度</h4>
-		<img src="img/ed_ed.jpg">
+		<img ng-src="img/ed_ed.jpg">
 	</div>
 	<div class="ed-container"  ng-if="type=='4'">
 		<h4>常见意外发生及死亡率</h4>
-		<img src="img/ed_tw.png">
+		<img ng-src="img/ed_tw.png">
 		<h4>意外导致后果概率</h4>
-		<img src="img/ed_gl.png">
+		<img ng-src="img/ed_gl.png">
 		<h4>保障额度</h4>
 		<p>建议为年收入加负债的2-10倍</p>
 	</div>
