--- a/app/partials/toubao_dingzhi_all.html
+++ b/app/partials/toubao_dingzhi_all.html
@@ -289,7 +289,7 @@
 					{{plan.name}}
 					<br/>
 					<a href="/ybwx-web/api/web_page/{{plan.provision_page_id}}">
-						<span class="blue">保险须知及保险条款</span>
+						<span class="blue">投保须知及保险条款</span>
 					</a>
 				</td>
 				<td >{{process_insured_money(plan.sum_insured)}}</td>
