--- a/app/wx_share/partials/jixian.html
+++ b/app/wx_share/partials/jixian.html
@@ -3,7 +3,7 @@
 	<div class="ctrl_back"> 
 		<img src="wx_share/img/sports/sports_back_img.jpg" class="back_img" srcset="wx_share/img/sports/sports_back_img2.jpg 568w, wx_share/img/sports/sports_back_img.jpg 667w, wx_share/img/sports/sports_back_img.jpg 736w" >
 		<div class="moneyAndsong layout">
-			<a href="javascript:" class="left" ng-click="sportsAddCoupon()"><img src="wx_share/img/sports/money.png"> 免费领取</a>
+			<a href="javascript:" class="left"  ng-click="sportsAddCoupon()"><img src="wx_share/img/sports/money.png"> 免费领取</a>
 			<a href="javascript:" class="right" ng-click="showShareTip()"><img src="wx_share/img/sports/song.png"> 送给好友</a>
 		</div>
 		<div class="sheng">
@@ -61,12 +61,21 @@
 				<div class="overseas">
 					<img src="wx_share/img/sports/overseas.png">
 					<div class="overseas_word">
-						<p class="word_head">极限运动保险-全球版<span class="right"><span class="jiacu_word">105 </span>元起</span></p>
-		                <div>全面保障境内外潜水、滑雪、攀岩等极限活动，包含突发意外、疾病、个人财产、旅行延误等、保额高达100万。同时提供专业的紧急救援</div>
+						<p class="word_head">极限运动保险-境外版<span class="right"><span class="jiacu_word">105 </span>元起</span></p>
+		                <div>全面保障境外潜水、滑雪、攀岩等极限活动，包含突发意外、疾病、个人财产、旅行延误等、保额高达100万。同时提供专业的紧急救援</div>
 					</div>
 					<div class="buy_but">立即购买</div>
 			    </div>
 			</a>
+		</div>
+	</div>
+</div>
+<div class="pop" id="pop">
+	<div class="ku" id="popup"></div>
+	<div class="popup_box">
+		<div style="position:relative;">
+			<img id="popup-img"  src="wx_share/img/sports/popup2.png" srcset="wx_share/img/sports/popup2.png 568w, wx_share/img/sports/popup.png 667w, wx_share/img/sports/popup.png 736w">
+		    <div class="popup_btn" id="popup-btn">朕知道了</div>
 		</div>
 	</div>
 </div>
