--- a/app/partials/temai_list.html
+++ b/app/partials/temai_list.html
@@ -4,22 +4,31 @@
 
 <div cg-busy="listPromise">
 <div class="nav" data-ng-init="init()" >
-	<div class="item" ng-class='{"select":category_id==item.id}'ng-repeat="item in list" ng-click='getList(item.id);'>{{item.name}}</div>
+	<div class="item" ng-class='{"select":category_id==nav.id}'ng-repeat="nav in navItems" ng-click='getCate(nav.id)'>{{nav.name}}</div>
 
 </div>
 
 <div class="insurance" >
-	<div class="insurance-item" ng-click="getGorys(item.id)"   ng-repeat="item in list">
+	<div class="insurance-item"   ng-repeat="item in cateItems">
 		<div class="logo">
-			<img src="img/temai/hospital.jpg">
+			<img ng-src="{{item.company_image_url}}">
 		</div>	
 		<div class="wrap">
-			<div class="title"></div>	
+			<div class="title">{{item.description}}</div>	
 			<div class="des"><span class="hot">热卖</span> 25种重大疾病 1年期</div>	
 			<div class="money">{{item.front_price}}</div>	
 		</div>	
 	</div>
-
+	<!-- <div class="insurance-item">
+		<div class="logo">
+			<img src="img/temai/120.jpg">
+		</div>	
+		<div class="wrap">
+			<div class="title">平安重疾险重疾险重疾险</div>	
+			<div class="des"><span class="hot">热卖</span> 25种重大疾病 1年期</div>	
+			<div class="money">258元起</div>	
+		</div>	
+	</div>
 	<div class="insurance-item">
 		<div class="logo">
 			<img src="img/temai/hospital.jpg">
@@ -29,7 +38,7 @@
 			<div class="des"><span class="hot">热卖</span> 25种重大疾病 1年期</div>	
 			<div class="money">258元起</div>	
 		</div>	
-	</div>
+	</div> -->
 </div>
 <ul ng-show="!isHaveResult" class="cell_font" style=" text-align: center;padding-top: 90px;" >
   <img src="img/qidai.png" >
