--- a/app/wx_share/css/sports.css
+++ b/app/wx_share/css/sports.css
@@ -329,3 +329,55 @@ body {
 .jiacu_word {
   font-weight: bold;
 }
+.pop {
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+.ku {
+  background: #000;
+  opacity: .5;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+/*.lai {
+  background: #fff;
+  position: fixed;
+  left: 15%;
+  top: .6rem;
+  border-radius: 10px;
+}*/
+.popup_box{
+  width: 80%;
+  position: relative;
+  left: 50%;
+  margin-left: -40%;
+  top: .6rem;
+}
+.popup_box img{
+  width: 100%;
+  position: relative;
+  left: 0;
+  top: 0;
+}
+.popup_btn {
+  position: absolute;
+  bottom: 11%;
+  left: 10%; 
+  /*margin-left: -25%;*/
+  border: 1px solid #019cff;
+  width: 80%;
+  height: .46rem;
+  color: #019cff;
+  font-size: .2rem;
+  border-radius: 5px;
+  line-height: .46rem;
+  text-align: center;
+  background: #fff;
+}
