--- a/app/wx_share/partials/jixian.html
+++ b/app/wx_share/partials/jixian.html
@@ -70,12 +70,13 @@
 		</div>
 	</div>
 </div>
+<!-- 弹出框  -->
 <div class="pop" id="pop">
 	<div class="ku" id="popup"></div>
 	<div class="popup_box">
 		<div style="position:relative;">
-			<img id="popup-img"  src="wx_share/img/sports/popup2.png" srcset="wx_share/img/sports/popup2.png 568w, wx_share/img/sports/popup.png 667w, wx_share/img/sports/popup.png 736w">
-		    <div class="popup_btn" id="popup-btn">朕知道了</div>
+			<img id="popup-img"  src="wx_share/img/sports/popup_1.png" srcset="wx_share/img/sports/popup_1.png 568w, wx_share/img/sports/popup_2.png 667w, wx_share/img/sports/popup_2.png 736w">
+		    <div class="popup_btn" id="popup-btn"><img src="wx_share/img/sports/sports_popup_btn1.png" ></div>
 		</div>
 	</div>
 </div>
