simple auto commit

--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -62,6 +62,9 @@
 			<span id="money_score" class="score">0</span>
 			<span class="danwei">分</span>
 	</div>
+	<div  style="position: absolute;right:0;top:-33px; font-size:16px;color:#999;text-align: right;" ng-if="type==4 || type ==2">
+			保1年
+	</div>
 	
 	<div class="weui_progress_bar" >
 		<div class="weui_progress_inner_bar" id="bar" style="width: 16px;">
