--- a/app/sass/temai_list.scss
+++ b/app/sass/temai_list.scss
@@ -37,35 +37,38 @@ body {
 		margin-bottom:5px;
 		border-bottom:1px solid #e2e2e2;
 		.logo{
-			width:150px;
+			width: 1.07rem;
 			@include flexbox;
 			@include align-items(center);
 			@include justify-content(center);	
 			border-right:1px solid #e2e2e2;
 			img{
-				width:45px;
+				width: 45px;
+				// width: 100%;
+				// height: 100%;
 			}
 		}
 		.wrap{
 			@include flex(1);
-			padding:15px;
+			padding: .15rem;
 			.hot{
 				background-color: #ff5c00;
 				color:#fff;
 				border-radius:3px;
 				padding:2px;
+				font-size: .1rem
 			}
 			.title{
 				color:#555;
-				font-size:15px;
+				font-size: .15rem;
 			}
 			.des{
 				color:#999;
-				font-size:13px;
+				font-size: .13rem;
 			}
 			.money{
 				color:#ff5c00;
-				font-size:15px;
+				font-size: .15rem;
 			}
 		}
 	}
