--- a/app/wx_share/partials/bd_part.html
+++ b/app/wx_share/partials/bd_part.html
@@ -27,7 +27,7 @@
 			<form class="" role="form" name="registration" novalidate>
 			<ul class="layout bd_part_tit">
 				<li class="left" >投保信息</li>
-				<li class="right">
+				<!-- <li class="right">
 					<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/130" class="blue"  ng-if="coupon_id==2">产品条款及投保须知
 					</a>
 					<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/1" class="blue"  ng-if="coupon_id==1">
@@ -39,7 +39,7 @@
 					<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/17" class="blue"  ng-if="coupon_id==4">
 					产品条款及投保须知
 					</a>
-				</li>
+				</li> -->
 			</ul>
 			<div class="bd_part_input ">
 				<input type="text" style="margin-top: none" placeholder="姓名"   onfocus="_hmt.push(['_trackEvent', 'wx_share_toubao', 'wx_share_toubao_name_focus']);" ng-minlength="1"  name="username" ng-model="user.username" required chinese >
@@ -68,14 +68,13 @@
 				    <small class="error" ng-show="card_numer_server_reason">{{card_numer_server_reason}}</small>
 				</div>
 				<div class="date_tit" >生效时间</div>
-
-
-				<input class="last_input" style="background:url(wx_share/img/jian.jpg) no-repeat 95% center #fff;background-size: .17rem .17rem; -webkit-appearance:none;line-height: .48rem;" type="date" placeholder="保障期间" min="{{minDate | date:'yyyy-MM-dd'}}" max="{{maxDate | date:'yyyy-MM-dd'}}" name="insurance_date" ng-change="genInEffectiveDate()" ng-model="user.insurance_date" required >
+					<input class="last_input" style="background:url(wx_share/img/jian.jpg) no-repeat 95% center #fff;background-size: .17rem .17rem; -webkit-appearance:none;line-height: .48rem;" type="date" placeholder="保障期间"  min="{{minDate | date:'yyyy-MM-dd'}}" max="{{maxDate | date:'yyyy-MM-dd'}}" name="insurance_date" ng-change="genInEffectiveDate()" ng-model="user.insurance_date" placeholder="yyyy/MM/dd" required >
 
 
 				<div class="cell"  style="color:red" ng-show="registration.insurance_date.$dirty && registration.insurance_date.$invalid || insurance_date_server_reason">
 	            	<small class="error" ng-show="registration.insurance_date.$error.min">保障日期最早从明天开始</small>
-	            	<small class="error" ng-show="registration.insurance_date.$error.max">保障日期超过最大日期2016年10月26</small>
+	            	<small class="error" ng-if="coupon_id==1 || coupon_id == 2 || coupon_id==3" ng-show="registration.insurance_date.$error.max">生效日期超过产品的最大要求</small>
+	            	<small class="error" ng-if="coupon_id==4" ng-show="registration.insurance_date.$error.max">生效日期超过产品的最大要求</small>
 	                <small class="error" ng-show="insurance_date_server_reason">{{insurance_date_server_reason}}</small>
 		        </div>
 
@@ -83,7 +82,7 @@
 		        <div ng-if="coupon_id==4" style="font-size:15px;padding-left:6px;height: .44rem;border: 1px solid #e2e2e2;background: #fff;line-height: .44rem;padding-left: 16px;font-size: 14px;color: #555;">{{user.inEnd_date | date:'yyyy/MM/dd'}}</div>
 
                 
-				<div class="baofei">保费： 由诺贝保险管家<span class="font_red">免费赠送</span></div>
+				<div class="baofei">由诺贝保险管家<span class="font_red">免费赠送</span></div>
 			</div>
 			<div class="item">
 				<input type="checkbox" id="chek" checked="checked" ng-model="user.know_contract" name="know_contract" required >
