--- a/app/template/new/product_64.html
+++ b/app/template/new/product_64.html
@@ -15,20 +15,20 @@
 		<div class="showknow-container" style="display: none;">
 			<div class="know-content">
 			
-			<h4>1. 投保限制</h4>
-			<p>每人限投1份</p>
+			<h4>1. 每人限投1份。</h4>
+			<p>本保险被保险人年龄限本保险被保险人年龄限3本保险被保险人年龄限</p>
 			<h4>2. 本保险被保险人年龄限30天-80周岁。</h4>
 			<h4>3. 被保险人乘坐的是国内航班，暂不支持春秋航空和国际航班。</h4>
 			
 
 			</div>
-			<div class="more-1-container">
+			<div class="more-1-container hide">
 				查看更多  <img src="img/jiantou.png" />
 			</div>
 
 			<div class="button-container">
-				<div class="left"><a href="javascript:;" class="weui_btn weui_btn_plain_more">产品条款</a></div>
-				<div class="right"><a href="javascript:;" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
+				<div class="left"><a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/66" class="weui_btn weui_btn_plain_more">产品条款</a></div>
+				<div class="right"><a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/66" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
 			</div>
 
 		</div>
@@ -54,18 +54,18 @@
 					<div>乘机人年龄限制是18-80周岁.</div>	
 				</div>
 			</li>
-			<li class="qa-item  question">
+			<li class="qa-item  question hide">
 				<div class="qa-icon "></div>	
 				<div class="qa-content"><div>请问登机前可以购买吗？</div></div>	
 			</li>
-			<li class="qa-item answer">
+			<li class="qa-item answer hide">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
 					<div>这款产品是次日零时生效的，所以您需要提前一天购买。</div>
 				</div>
 			</li>
 			</ul>
-			<div class="more-container">
+			<div class="more-container ">
 				<a href="javascript:;" class="weui_btn weui_btn_plain_more">查看更多
 					<img src="img/jiantou.png" />
 				</a>
