--- a/app/css/temai_detail.css
+++ b/app/css/temai_detail.css
@@ -227,6 +227,9 @@
 body {
   background-color: #f5f5f5; }
 
+.hide {
+  display: none !important; }
+
 header {
   background-color: #fff; }
   header .top-container {
@@ -295,15 +298,13 @@ header {
 
 .fl-3 {
   float: left;
-  width: 70px;
   margin-right: 10px; }
 
 .tail-container {
   margin-top: 10px;
   border-bottom: 1px solid  #e2e2e2;
   background-color: #fff;
-  padding-bottom: 20px;
-  margin-bottom: 65px; }
+  padding-bottom: 20px; }
 
 .introd-container {
   padding: 10px; }
