--- a/app/partials/temai_index.html
+++ b/app/partials/temai_index.html
@@ -1,6 +1,9 @@
 <link rel="stylesheet" type="text/css" href="css/temai_index.css?rev=b3f2f916ca86f1a92dc3fd524554d0fa">
 <link rel="stylesheet" href="wx_bx_gl/css/swiper.min.css">
 <style>
+
+
+
 .swiper-pagination-bullet{
 	background-color: #fff;
 }
@@ -34,10 +37,10 @@
 			</div>
 </div>
 <div class="nav">
-	<div class="item"><img src="img/temai/nav-1.png"><div>0元抢</div> </div>
-	<div class="item"><img src="img/temai/nav-2.png"><div>怎么买</div></div>
-	<div class="item"><img src="img/temai/nav-3.png"><div>专属方案</div></div>
-	<div class="item"><img src="img/temai/nav-4.png"><div>更多保障</div></div>
+	<a href="/wx_share.html#jixian" class="item"><img src="img/temai/nav-1.png"><div >0元抢</div></a>
+	<a href="/wx_gl.html" class="item"><img src="img/temai/nav-2.png"><div>怎么买</div></a>
+	<a href="/" class="item"><img src="img/temai/nav-3.png"><div>专属方案</div></a>
+	<a href="/#list" class="item"><img src="img/temai/nav-4.png"><div>更多保障</div></a>
 </div>
 
 <div class="recommend">
@@ -45,30 +48,26 @@
 	热门推荐		
 </div>
 <div style="margin-bottom: 60px">
-<div class="recommend-content">
-	<div class="introd">
+<div class="recommend-content" ng-repeat="category in categorys">
+	<div class="introd" ng-click="goCategory(category.id)">
 		<div class="box">
-			<img src="img/temai/introd.png"/>
-			<div class="name">旅游</div>
+			<img ng-src="{{category.category_image_url}}"/>
+			<div class="name">{{category.name}}</div>
 			<div class="more">查看更多</div>
 		</div>
 	</div>
 	<div class="recommend-container">
-			<div class="flex-item">
-				<div class="title">平安|航空延误险</div>
-				<div class="des"><span class="hot">热卖</span> 延误2小时起赔，200元保障 仅需30元!</div>
-				<div class="money">258元起</div>
+			<div class="flex-item" ng-click="goDetail(insurance.id)" ng-repeat="insurance in category.insurances">
+				<div class="title">{{insurance.name}}</div>
+				<div class="des"><span class="hot" style="display:none">热卖</span> {{insurance.description}}</div>
+				<div class="money">{{insurance.front_price}}元</div>
 			</div>	
-			<div class="flex-item">
-				<div class="title">平安|航空延误险</div>
-				<div class="des">延误2小时起赔，200元保障 仅需30元!</div>
-				<div class="money">258元起</div>
-			</div>	
+			
 		
 	</div>
 </div>
 
-
+<!--
 <div class="recommend-content">
 	<div class="introd">
 		<div class="box">
@@ -91,11 +90,11 @@
 		
 	</div>
 </div>
-
+-->
 
 </div>
 <div class=" fix_container">
-	<a href="javascript:void(0)" class="btn btn_n_primary " ><img src="img/temai/kefu.png"> <span>客服电话 </span>400-8080-988</a>
+	<a href="javascript:void(0)" class="btn btn_n_primary " ><img src="img/temai/kefu.png"> <span>客服电话 </span>400-992-0205</a>
 </div>
 
 <script src="wx_bx_gl/js/swiper.min.js"></script>
