--- a/app/sass/temai_detail.scss
+++ b/app/sass/temai_detail.scss
@@ -7,6 +7,9 @@
 body {
 	background-color: #f5f5f5;
 }
+.hide{
+	display:none !important;
+}
 header {
 	background-color: #fff;
 
@@ -96,7 +99,7 @@ header {
 
 .fl-3 {
 	float: left;
-	width: 70px;
+
 	margin-right: 10px;
 }
 
@@ -106,7 +109,6 @@ header {
 	border-bottom: 1px solid  #e2e2e2;
 	background-color: #fff;
 	padding-bottom: 20px;
-	margin-bottom: 65px;
 }
 .introd-container{
 	padding:10px;
