--- a/app/partials/temai_detail.html
+++ b/app/partials/temai_detail.html
@@ -3,7 +3,7 @@
 <div  cg-busy="myPromise" >
 	<header>
 		<div class="top-container" >
-			<img ng-src="{{data.large_image}}" style="width:100%;">
+			<img ng-src="{{data.hot_image}}" style="width:100%;">
 			<div class="company">
 				{{data.insurance_company_name}}承保
 			</div>
@@ -13,7 +13,11 @@
 					<img src="img/temai/dun.png">&nbsp;</div>
 			</div>
 		</div>
-		<div class="bottom-container">{{data.coverage_overview}}</div>
+		<div class="bottom-container">
+		
+		<div ng-repeat="overview in coverage_overviews">{{overview}}</div>
+
+		</div>
 	</header>
 
 	<div class="detail-content"  data-ng-init="init()"   >
@@ -24,39 +28,49 @@
 			</div>
 
 		</div>
+		<div id="content_{{$index}}"  ng-show="selectTable==$index" ng-repeat="plan in data.insurance_plans">
 
-		<table class="content-table" id="content_{{$index}}" ng-repeat="plan in data.insurance_plans" ng-show="selectTable==$index">
-			<tr>
-				<th width="70%">主要保障</th>
-				<th>保额</th>
-			</tr>
+			<table class="content-table"   >
+				<tr>
+					<th width="70%" style="text-align: left">主要保障</th>
+					<th>保额</th>
+				</tr>
+				<tr ng-repeat="item in plan.main_coverage_beans">
+					<td class="td-left" style="cursor: pointer;">
+						{{item.name}}
+						<img src="img/temai/wen.png"  class="help-img" title="{{item.description}}"/>
+						<br/>
+						<span class="gray" >{{item.overview}}</span>
+					</td>
+					<td ng-if="item.sum_insured>0">{{item.sum_insured | number}}元{{item.danwei}}</td>
+					<td ng-if="item.sum_insured==0">赠送</td>
+				</tr>
+			</table>
 
-			<tr ng-repeat="item in plan.main_coverage_beans">
-				<td class="td-left" style="cursor: pointer;">
-					{{item.name}}
-					<img src="img/temai/wen.png"  class="help-img" title="{{item.description}}"/>
-					<br/>
-					<span class="gray" style="display: none">含高风险运动</span>
-				</td>
-				<td>{{item.sum_insured | number}}元{{item.danwei}}</td>
-			</tr>
-			<tr>
-				<th width="70%">次要保障</th>
-				<th>保额</th>
-			</tr>
+			<table class="content-table" style="margin-top:10px;" >
+				<tr>
+					<th width="70%"  style="text-align: left">其他保障</th>
+					<th>保额</th>
+				</tr>
+				<tr ng-repeat="item in plan.second_coverage_beans" ng-show="$index<3">
+					<td class="td-left" style="cursor: pointer;">
+						{{item.name}}
+						<img src="img/temai/wen.png"  class="help-img" title="{{item.description}}"/>
+						<br/>
+						<span class="gray" >{{item.overview}}</span>
+					</td>
+					<td ng-if="item.sum_insured>0">{{item.sum_insured | number}}元{{item.danwei}}</td>
+					<td ng-if="item.sum_insured==0">赠送</td>
+				</tr>
+				<tr  class="more_coverages_button" ng-show="plan.second_coverage_beans.length>3" data-switch='on'><td colspan="2" class="gray"><span>查看更多</span><img src="img/temai/arrow.jpg" class="arrow"></td></tr>
+				
+			</table>
 
-			<tr ng-repeat="item in plan.second_coverage_beans">
-				<td class="td-left" style="cursor: pointer;">
-					{{item.name}}
-					<img src="img/temai/wen.png"  class="help-img" title="{{item.description}}"/>
-					<br/>
-					<span class="gray" style="display: none">含高风险运动</span>
-				</td>
-				<td>{{item.sum_insured | number}}元{{item.danwei}}</td>
-			</tr>
+		
+
+		</div>
 
 
-		</table>
 	</div>
 
 	<div class="tail-container"></div>
@@ -129,13 +143,28 @@ $(function(){
  });
 
  $("body").on("click",".more-1-container",function(){
- 	 $(".know-content").children().show();
+ 	 $(".know-content").children().removeClass("hide");
      $(this).hide();
  });
   $("body").on("click",".more-container",function(){
  	 $(".qa-container").find("li").removeClass("hide");
      $(this).hide();
  });
+  $("body").on("click",".more_coverages_button",function(){
+  		var switchValue = $(this).attr("data-switch");
+  		if(switchValue === 'on'){
+	 		$(this).siblings().removeClass("ng-hide");
+	 		$(this).find("span").html("收起");
+	 		$(this).attr("data-switch","off");
+	 		$(this).find("img").addClass("up");
+  		}else{
+  			$(this).siblings(":gt(3)").addClass("ng-hide");
+	 		$(this).find("span").html("查看更多");
+  			$(this).attr("data-switch","on");
+  			$(this).find("img").removeClass("up");
+  		}
+ });
+
 
   $(".tail-container").on("click",".hd",function(){
   	$(".tail-header").find(".hd").removeClass("select");
