--- a/app/template/product_100.html
+++ b/app/template/product_100.html
@@ -1,6 +1,6 @@
 <div class="detail-container">
   <div>
-    <img src="img/product/hbyw003.png" ></div>
+    <img src="img/product/hbyw003.jpg" ></div>
 </div>
   <div class="line"></div>
   <h4>
