--- a/app/css/temai_index.css
+++ b/app/css/temai_index.css
@@ -227,6 +227,22 @@
 body {
   background-color: #f5f5f5; }
 
+.qrcode-wrapper {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 100; }
+  .qrcode-wrapper .qrcode-container {
+    position: relative;
+    top: .6rem;
+    width: 70%;
+    margin-left: 15%; }
+    .qrcode-wrapper .qrcode-container img {
+      width: 100%; }
+
 header {
   background-color: #1e4e8e;
   height: 45px;
@@ -327,6 +343,7 @@ header {
     justify-content: center;
     text-align: center;
     border-bottom: 1px solid #e2e2e2;
+    padding: 10px;
     border-right: 1px solid #e2e2e2; }
     .recommend-content .introd .box .name {
       color: #555;
@@ -355,7 +372,13 @@ header {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
-    flex-direction: column; }
+    flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center; }
     .recommend-content .recommend-container .flex-item {
       -webkit-box-flex: 1;
       -webkit-flex: 1;
@@ -369,7 +392,19 @@ header {
         width: .1px;
     }*/
       border-bottom: 1px solid #e2e2e2;
-      padding: 10px 15px; }
+      padding: 10px 15px;
+      width: 100%;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center; }
       .recommend-content .recommend-container .flex-item .hot {
         display: inline-block;
         background-color: #ff5c00;
@@ -385,6 +420,18 @@ header {
       .recommend-content .recommend-container .flex-item .money {
         color: #ff5c00;
         font-weight: bold; }
+    .recommend-content .recommend-container .flex-item > div {
+      -webkit-box-flex: 1;
+      -webkit-flex: 1;
+      -moz-box-flex: 1;
+      -ms-flex: 1;
+      flex: 1;
+      /*
+    @if $direction == column {
+        height: .1px;
+    } @else {
+        width: .1px;
+    }*/ }
 
 .fix_container span {
   color: #588dd4; }
