--- a/app/sass/temai_detail.scss
+++ b/app/sass/temai_detail.scss
@@ -19,6 +19,7 @@ header {
 		color: #fff;
 		position: relative;
 		overflow: hidden;
+		line-height: 0;
 
 		.company {
 			background-color: #588dd4;
@@ -30,6 +31,7 @@ header {
 			right:10px;
 			border-bottom-left-radius: 2px;
 			border-bottom-right-radius: 2px;
+			line-height: 15px;
 		}
 		.title {
 			font-size: 17px;
@@ -66,6 +68,9 @@ header {
 	.btn-container {
 		padding: 10px 0;
 		overflow: hidden;
+		.weui_btn_primary{
+			border:1px solid #588dd4;
+		}
 	}
 	.content-table {
 		width: 100%;
@@ -99,16 +104,15 @@ header {
 
 .fl-3 {
 	float: left;
-
 	margin-right: 10px;
 }
-
 
 .tail-container {
 	margin-top: 10px;
 	border-bottom: 1px solid  #e2e2e2;
 	background-color: #fff;
 	padding-bottom: 20px;
+	margin-bottom:60px;
 }
 .introd-container{
 	padding:10px;
@@ -138,6 +142,19 @@ header {
 		color: #588dd4;
 		border-bottom: 3px solid #588dd4;
 	}
+}
+.more_coverages_button{
+	cursor:pointer;
+}
+.arrow{
+	width:12px;
+	vertical-align:2px;
+	margin-left:2px;
+}
+.up{
+	-ms-transform: rotate(180deg); /* IE 9 */
+    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+    transform: rotate(180deg);
 }
 .qa-container {
 	background-color: #FFF;
@@ -180,11 +197,11 @@ header {
 	}
 }
 .question .qa-icon {
-	background: url(../img/temai/question.jpg) no-repeat  center;
+	background: url(../img/temai/question.jpg) no-repeat  top;
 	background-size: 22px;
 }
 .answer .qa-icon {
-	background: url(../img/temai/answer.jpg) no-repeat  center;
+	background: url(../img/temai/answer.jpg) no-repeat  top;
 	background-size: 22px;
 }
 .question {
