--- a/app/sass/temai_index.scss
+++ b/app/sass/temai_index.scss
@@ -7,6 +7,24 @@
 body{
 	background-color: #f5f5f5;
 }
+.qrcode-wrapper{
+	display:none;
+	position:fixed;
+	width:100%;
+	height:100%;
+	left:0;
+	top:0;
+	z-index:100;
+	.qrcode-container{
+		position:relative;
+		top:.6rem;
+		width:70%;
+		margin-left:15%;
+		img{
+			width:100%;
+		}
+	}
+}
 header{
 	background-color: #1e4e8e;
 	height:45px;	
@@ -81,6 +99,7 @@ header{
 		@include justify-content(center);	
 		text-align: center;
 		border-bottom:1px solid #e2e2e2;
+		padding:10px;
 		.box{
 			.name{
 				color:#555;
@@ -101,11 +120,18 @@ header{
 		@include flex(2.5);
 		@include flexbox;
 		@include flex-direction(column);
+		@include align-items(center);
+		@include justify-content(center);	
 			
 			.flex-item{
 				@include flex(1,column);
 				border-bottom:1px solid #e2e2e2;
 				padding:10px 15px;
+				width:100%;
+				@include flexbox;
+				@include align-items(center);
+				@include justify-content(center);	
+
 				.hot{
 						display: inline-block;
 						background-color: #ff5c00;
@@ -126,6 +152,9 @@ header{
 					color:#ff5c00;
 					font-weight: bold;
 				}
+			}
+			.flex-item >div{
+				@include flex(1);
 			}
 	
 	}
