--- a/app/css/temai_list.css
+++ b/app/css/temai_list.css
@@ -320,7 +320,7 @@ body {
         background-color: #ff5c00;
         color: #fff;
         border-radius: 3px;
-        padding: 2px;
+        padding: .01rem .03rem;
         font-size: .1rem; }
       .insurance .insurance-item .wrap .title {
         color: #555;
