--- a/app/partials/temai_list.html
+++ b/app/partials/temai_list.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/temai_list.css?rev=001d8653236cba2fc95c56686b1c9124">
+<link rel="stylesheet" type="text/css" href="css/temai_list.css?rev=fdgfdgfgfg">
 
 
 
