--- a/app/sass/temai_list.scss
+++ b/app/sass/temai_list.scss
@@ -55,7 +55,7 @@ body {
 				background-color: #ff5c00;
 				color:#fff;
 				border-radius:3px;
-				padding:2px;
+				padding: .01rem .03rem;
 				font-size: .1rem
 			}
 			.title{
