simple auto commit

--- a/app/template/new/product_94.html
+++ b/app/template/new/product_94.html
@@ -40,17 +40,17 @@
 		-->
 		<div class="showknow-container" style="display: none;">
 			<div class="know-content">
-			<h4>1. 承保年龄</h4>
+			<h4>1.承保年龄</h4>
 			<p>1-80周岁，被保险人常住地为中华人民共和国境内。</p>
-			<h4>2. 承保范围</h4>
+			<h4>2.承保范围</h4>
 			<p>滑雪、潜水、骑马等；承保恐怖分子行为造成的伤害；但滑翔翼，跳伞活动等空中活动不承保。</p>
-			<h4>3. 限制区域</h4>
+			<h4>3.限制区域</h4>
 			<p>本保险不承保任何直接或间接由于前往或途经阿富汗、缅甸、古巴、刚果民主共和国、伊朗、伊拉克、利比里亚、苏丹、叙利亚，或在上述国家旅行期间发生的保险事故。</p>
 			<h4 class="hide">4.投保限制 </h4>
 			<p class="hide">在中国境内（不含港澳台）的外籍人士购买本产品需满足：至少在中国境内居住或工作满半年以上。不承保回原国籍。</p>
-			<h4 class="hide">5. </h4>
-			<p class="hide">如保险期限为一年，则本计划保障的单次最长旅行期限为182天。</p>
-            <h4 class="hide">6. </h4>
+			<h4 class="hide">5.保险期间 </h4>
+			<p class="hide">该产品保险期限最长为一年，则本计划保障的单次最长旅行期限为182天。</p>
+            <h4 class="hide">6.投保份数 </h4>
 			<p class="hide">投保份数限定：被产品每一被保险人限投保一份，多投无效，保险公司不承担多投的保险责任。</p>
 
 
@@ -60,8 +60,8 @@
 			</div>
 
 			<div class="button-container">
-				<div class="left"><a href="javascript:;" class="weui_btn weui_btn_plain_more">产品条款</a></div>
-				<div class="right"><a href="javascript:;" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
+				<div class="left"><a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/200" class="weui_btn weui_btn_plain_more">产品条款</a></div>
+				<div class="right"><a href="http://web.youbaowuxian.com/#/claim_information?claim_id=1" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
 			</div>
 
 		</div>
@@ -69,32 +69,32 @@
 			<ul >
 			<li class="qa-item  question">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>去香港航班可以购买吗？</div>	</div>	
+				<div class="qa-content"><div>我要去东南亚能用这个保险吗？</div>	</div>	
 			</li>
 			<li class="qa-item answer">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>该产品暂不支持春秋航空、国际航班，对国内航班没有限制。</div>	
+					<div>您好，这款产品包括了亚洲（不含中国大陆）、欧洲（包括申根地区）、澳洲、美洲、非洲，因此东南亚或港澳台都是适用的。</div>	
 				</div>
 			</li>
 			<li class="qa-item  question">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>这款产品的投保年龄有限制吗？</div></div>	
+				<div class="qa-content"><div>双倍给付啥意思，可以赔两倍钱吗？</div></div>	
 			</li>
 			<li class="qa-item answer">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>乘机人年龄限制是18-80周岁.</div>	
+					<div>您好，双倍给付指在搭乘公共交通工具时发生意外事故而造成的身故或伤残可以获得多一倍的赔偿。比如，购买了基础版保险可赔偿身故20万，而如果在乘坐地铁时因出轨造成的死亡，还可额外获得20万赔偿。</div>	
 				</div>
 			</li>
 			<li class="qa-item  question hide">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>请问登机前可以购买吗？</div></div>	
+				<div class="qa-content"><div>旅游时拍照不小心摔坏的相机是不是可以赔的，属于个人的随身财产？</div></div>	
 			</li>
 			<li class="qa-item answer hide">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>这款产品是次日零时生效的，所以您需要提前一天购买。</div>
+					<div>您好，赔偿个人随身财产需要满足被盗窃、抢劫或任何其他第三方的责任而遗失或意外损坏而造成的损失。如果是个人没有拿稳造成的跌落损失是不在保障范围内的。</div>
 				</div>
 			</li>
 			</ul>
